resolve issue with images stretching

--- a/static/css/catalogue.css
+++ b/static/css/catalogue.css
@@ -72,8 +72,8 @@ h1 {
 
 .card-top img {
     transition: transform 1s ease-out;
-    max-height: 100%;
-    max-width: 100%;
+    max-height: auto;
+    max-width: auto;
 }
 
 a .card-top img:hover {
